--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,15 @@
 /*body {
- background-image:url("/img/pic1.jpg")
+ background:url("/img/pic1.jpg")
  background-repeat: no-repeat;
  background-size:100%;
 }*/
-/*.clearBox{
+
+
+.clearBox{
 	overflow:hidden;
 	clear: both;
-}*/
-
-/*#animalId{
-	width:12.8%;
-	float:right;
-	/*display:none;*/
-}*/
-
-#animalId input{
-	background-color:red;
 }
+
 
 ul {
     list-style-type: none;
@@ -40,4 +33,13 @@ li a {
 
 li a:hover {
     background-color: #111;
+}
+
+#background{
+	background-image:url("../img/dog.jpg");
+	background-repeat:no-repeat;
+	background-size:cover;
+	height:100vh;
+	width:100%;
+
 }
